--- a/web/dars.html
+++ b/web/dars.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="uz">
 <head>
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Darslar</title>
 
@@ -9,62 +10,58 @@ body{
   margin:0;
   font-family:Arial;
   background: radial-gradient(circle at top,#6d28d9,#020617);
+  min-height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
-  min-height:100vh;
   color:white;
 }
 
-/* O'rtadagi oynacha */
 .wrapper{
   width:95%;
   max-width:420px;
   background:rgba(30,30,60,0.6);
   border-radius:30px;
   padding:25px;
-  box-shadow:0 20px 60px rgba(0,0,0,0.6);
   backdrop-filter:blur(20px);
+  box-shadow:0 20px 60px rgba(0,0,0,0.6);
   text-align:center;
 }
 
 .title{
-  font-size:30px;
+  font-size:32px;
   font-weight:bold;
   margin-bottom:20px;
 }
 
-/* Tugmalar */
-.menu-btn{
+.lesson-btn{
   display:block;
   width:100%;
   padding:18px;
   margin:12px 0;
   border:none;
-  border-radius:25px;
+  border-radius:22px;
   font-size:20px;
   font-weight:bold;
   color:white;
   text-decoration:none;
   text-align:center;
-  box-shadow:0 8px 25px rgba(0,0,0,0.4);
   transition:0.3s;
+  box-shadow:0 8px 30px rgba(0,0,0,0.5);
 }
 
-.menu-btn:hover{
+.lesson-btn:hover{
   transform:scale(1.05);
   opacity:0.9;
 }
 
-/* Rang */
-.green{
-  background:linear-gradient(90deg,#22c55e,#16a34a);
+/* Ranglar */
+.gradient{
+  background:linear-gradient(90deg,#ff7a18,#8b5cf6,#2563eb);
 }
 
-/* Orqaga tugmasi */
 .back{
   background:linear-gradient(90deg,#ef4444,#dc2626);
-  margin-top:20px;
 }
 </style>
 </head>
@@ -72,127 +69,21 @@ body{
 <body>
 
 <div class="wrapper">
+<h1 class="title">📘 Darslar</h1>
 
-<div class="title">📘 Darslar</div>
+<a href="mavzu1.html" class="lesson-btn gradient">1-Mavzu</a>
+<a href="mavzu2.html" class="lesson-btn gradient">2-Mavzu</a>
+<a href="mavzu3.html" class="lesson-btn gradient">3-Mavzu</a>
+<a href="mavzu4.html" class="lesson-btn gradient">4-Mavzu</a>
+<a href="mavzu5.html" class="lesson-btn gradient">5-Mavzu</a>
+<a href="mavzu6.html" class="lesson-btn gradient">6-Mavzu</a>
+<a href="mavzu7.html" class="lesson-btn gradient">7-Mavzu</a>
+<a href="mavzu8.html" class="lesson-btn gradient">8-Mavzu</a>
+<a href="mavzu9.html" class="lesson-btn gradient">9-Mavzu</a>
+<a href="mavzu10.html" class="lesson-btn gradient">10-Mavzu</a>
 
-<a href="mavzu1.html" class="menu-btn green">1-Mavzu</a>
-<a href="mavzu2.html" class="menu-btn green">2-Mavzu</a>
-<a href="mavzu3.html" class="menu-btn green">3-Mavzu</a>
-<a href="mavzu4.html" class="menu-btn green">4-Mavzu</a>
-<a href="mavzu5.html" class="menu-btn green">5-Mavzu</a>
-<a href="mavzu6.html" class="menu-btn green">6-Mavzu</a>
-<a href="mavzu7.html" class="menu-btn green">7-Mavzu</a>
-<a href="mavzu8.html" class="menu-btn green">8-Mavzu</a>
-<a href="mavzu9.html" class="menu-btn green">9-Mavzu</a>
-<a href="mavzu10.html" class="menu-btn green">10-Mavzu</a>
-<a href="mavzu11.html" class="menu-btn green">11-Mavzu</a>
-<a href="mavzu12.html" class="menu-btn green">12-Mavzu</a>
-<a href="mavzu13.html" class="menu-btn green">13-Mavzu</a>
-<a href="mavzu14.html" class="menu-btn green">14-Mavzu</a>
-<a href="mavzu15.html" class="menu-btn green">15-Mavzu</a>
-<a href="mavzu16.html" class="menu-btn green">16-Mavzu</a>
-<a href="mavzu17.html" class="menu-btn green">17-Mavzu</a>
-<a href="mavzu18.html" class="menu-btn green">18-Mavzu</a>
-<a href="mavzu19.html" class="menu-btn green">19-Mavzu</a>
-<a href="mavzu20.html" class="menu-btn green">20-Mavzu</a>
-<a href="mavzu21.html" class="menu-btn green">21-Mavzu</a>
-<a href="mavzu22.html" class="menu-btn green">22-Mavzu</a>
-<a href="mavzu23.html" class="menu-btn green">23-Mavzu</a>
-<a href="mavzu24.html" class="menu-btn green">24-Mavzu</a>
-<a href="mavzu25.html" class="menu-btn green">25-Mavzu</a>
-<a href="mavzu26.html" class="menu-btn green">26-Mavzu</a>
-<a href="mavzu27.html" class="menu-btn green">27-Mavzu</a>
-<a href="mavzu28.html" class="menu-btn green">28-Mavzu</a>
-<a href="mavzu29.html" class="menu-btn green">29-Mavzu</a>
-<a href="mavzu30.html" class="menu-btn green">30-Mavzu</a>
-<a href="mavzu31.html" class="menu-btn green">31-Mavzu</a>
-<a href="mavzu32.html" class="menu-btn green">32-Mavzu</a>
-<a href="mavzu33.html" class="menu-btn green">33-Mavzu</a>
-<a href="mavzu34.html" class="menu-btn green">34-Mavzu</a>
-<a href="mavzu35.html" class="menu-btn green">35-Mavzu</a>
-<a href="mavzu36.html" class="menu-btn green">36-Mavzu</a>
-<a href="mavzu37.html" class="menu-btn green">37-Mavzu</a>
-<a href="mavzu38.html" class="menu-btn green">38-Mavzu</a>
-<a href="mavzu39.html" class="menu-btn green">39-Mavzu</a>
-<a href="mavzu40.html" class="menu-btn green">40-Mavzu</a>
-<a href="mavzu41.html" class="menu-btn green">41-Mavzu</a>
-<a href="mavzu42.html" class="menu-btn green">42-Mavzu</a>
-<a href="mavzu43.html" class="menu-btn green">43-Mavzu</a>
-<a href="mavzu44.html" class="menu-btn green">44-Mavzu</a>
-<a href="mavzu45.html" class="menu-btn green">45-Mavzu</a>
-<a href="mavzu46.html" class="menu-btn green">46-Mavzu</a>
-<a href="mavzu47.html" class="menu-btn green">47-Mavzu</a>
-<a href="mavzu48.html" class="menu-btn green">48-Mavzu</a>
-<a href="mavzu49.html" class="menu-btn green">49-Mavzu</a>
-<a href="mavzu50.html" class="menu-btn green">50-Mavzu</a>
-<a href="mavzu51.html" class="menu-btn green">51-Mavzu</a>
-<a href="mavzu52.html" class="menu-btn green">52-Mavzu</a>
-<a href="mavzu53.html" class="menu-btn green">53-Mavzu</a>
-<a href="mavzu54.html" class="menu-btn green">54-Mavzu</a>
-<a href="mavzu55.html" class="menu-btn green">55-Mavzu</a>
-<a href="mavzu56.html" class="menu-btn green">56-Mavzu</a>
-<a href="mavzu57.html" class="menu-btn green">57-Mavzu</a>
-<a href="mavzu58.html" class="menu-btn green">58-Mavzu</a>
-<a href="mavzu59.html" class="menu-btn green">59-Mavzu</a>
-<a href="mavzu60.html" class="menu-btn green">60-Mavzu</a>
-<a href="mavzu61.html" class="menu-btn green">61-Mavzu</a>
-<a href="mavzu62.html" class="menu-btn green">62-Mavzu</a>
-<a href="mavzu63.html" class="menu-btn green">63-Mavzu</a>
-<a href="mavzu64.html" class="menu-btn green">64-Mavzu</a>
-<a href="mavzu65.html" class="menu-btn green">65-Mavzu</a>
-<a href="mavzu66.html" class="menu-btn green">66-Mavzu</a>
-<a href="mavzu67.html" class="menu-btn green">67-Mavzu</a>
-<a href="mavzu68.html" class="menu-btn green">68-Mavzu</a>
-<a href="mavzu69.html" class="menu-btn green">69-Mavzu</a>
-<a href="mavzu70.html" class="menu-btn green">70-Mavzu</a>
-<a href="mavzu71.html" class="menu-btn green">71-Mavzu</a>
-<a href="mavzu72.html" class="menu-btn green">72-Mavzu</a>
-<a href="mavzu73.html" class="menu-btn green">73-Mavzu</a>
-<a href="mavzu74.html" class="menu-btn green">74-Mavzu</a>
-<a href="mavzu75.html" class="menu-btn green">75-Mavzu</a>
-<a href="mavzu76.html" class="menu-btn green">76-Mavzu</a>
-<a href="mavzu77.html" class="menu-btn green">77-Mavzu</a>
-<a href="mavzu78.html" class="menu-btn green">78-Mavzu</a>
-<a href="mavzu79.html" class="menu-btn green">79-Mavzu</a>
-<a href="mavzu80.html" class="menu-btn green">80-Mavzu</a>
-<a href="mavzu81.html" class="menu-btn green">81-Mavzu</a>
-<a href="mavzu82.html" class="menu-btn green">82-Mavzu</a>
-<a href="mavzu83.html" class="menu-btn green">83-Mavzu</a>
-<a href="mavzu84.html" class="menu-btn green">84-Mavzu</a>
-<a href="mavzu85.html" class="menu-btn green">85-Mavzu</a>
-<a href="mavzu86.html" class="menu-btn green">86-Mavzu</a>
-<a href="mavzu87.html" class="menu-btn green">87-Mavzu</a>
-<a href="mavzu88.html" class="menu-btn green">88-Mavzu</a>
-<a href="mavzu89.html" class="menu-btn green">89-Mavzu</a>
-<a href="mavzu90.html" class="menu-btn green">90-Mavzu</a>
-<a href="mavzu91.html" class="menu-btn green">91-Mavzu</a>
-<a href="mavzu92.html" class="menu-btn green">92-Mavzu</a>
-<a href="mavzu93.html" class="menu-btn green">93-Mavzu</a>
-<a href="mavzu94.html" class="menu-btn green">94-Mavzu</a>
-<a href="mavzu95.html" class="menu-btn green">95-Mavzu</a>
-<a href="mavzu96.html" class="menu-btn green">96-Mavzu</a>
-<a href="mavzu97.html" class="menu-btn green">97-Mavzu</a>
-<a href="mavzu98.html" class="menu-btn green">98-Mavzu</a>
-<a href="mavzu99.html" class="menu-btn green">99-Mavzu</a>
-<a href="mavzu100.html" class="menu-btn green">100-Mavzu</a>
-<a href="mavzu101.html" class="menu-btn green">101-Mavzu</a>
-<a href="mavzu102.html" class="menu-btn green">102-Mavzu</a>
-<a href="mavzu103.html" class="menu-btn green">103-Mavzu</a>
-<a href="mavzu104.html" class="menu-btn green">104-Mavzu</a>
-<a href="mavzu105.html" class="menu-btn green">105-Mavzu</a>
-<a href="mavzu106.html" class="menu-btn green">106-Mavzu</a>
-<a href="mavzu107.html" class="menu-btn green">107-Mavzu</a>
-<a href="mavzu108.html" class="menu-btn green">108-Mavzu</a>
-<a href="mavzu109.html" class="menu-btn green">109-Mavzu</a>
-<a href="mavzu110.html" class="menu-btn green">110-Mavzu</a>
-<a href="mavzu111.html" class="menu-btn green">111-Mavzu</a>
-<a href="mavzu112.html" class="menu-btn green">112-Mavzu</a>
-
-<a href="index.html" class="menu-btn back">⬅ Orqaga</a>
-
+<a href="index.html" class="lesson-btn back">⬅ Orqaga</a>
 </div>
 
-</body>
-```
 </body>
 </html>
