--- a/web/dars.html
+++ b/web/dars.html
@@ -11,10 +11,8 @@ body{
   font-family:Arial;
   background: radial-gradient(circle at top,#6d28d9,#020617);
   min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
   color:white;
+  padding-top:40px;
 }
 
 .wrapper{
@@ -26,6 +24,7 @@ body{
   backdrop-filter:blur(20px);
   box-shadow:0 20px 60px rgba(0,0,0,0.6);
   text-align:center;
+  margin:auto;
 }
 
 .title{
