--- a/web/index.html
+++ b/web/index.html
@@ -99,7 +99,7 @@ body{
   <div class="subtitle">Mini Darslik & Test Platforma</div>
 
 <a href="dars.html" class="lesson-btn">📘 Darslar</a>
-<a href="test.html" class="lesson-btn">📝 Testlar</a>
+<a href="atamalar.html"class="lesson-btn">🎓Atamalar</a>
 <a href="atama.html" class="lesson-btn">📖 Atamalar</a>
   <div class="footer">Turk tili Bot © 2026</div>
 </div>
