--- a/web/dars.html
+++ b/web/dars.html
@@ -106,6 +106,7 @@ body{
 <a href="mavzu8.html" class="lesson-btn gradient">8-Mavzu</a>
 <a href="mavzu9.html" class="lesson-btn gradient">9-Mavzu</a>
 <a href="mavzu10.html" class="lesson-btn gradient">10-Mavzu</a>
+<a href="mavzu11.html" class="lesson-btn gradient">11-Mavzu</a>
 
 <a href="index.html" class="lesson-btn back">⬅ Orqaga</a>
 </div>
