--- a/web/mavzu1.html
+++ b/web/mavzu1.html
@@ -199,6 +199,8 @@ Sizga qulay boʻlishi uchun muloqotda kerak boʻladigan asosiy gaplarni ham kelt
 <button class="test-btn" onclick="t10('2')">konuşuyorsun</button>
 <button class="test-btn" onclick="t10('3')">öğreniyorsun</button>
 <p id="r10" class="result"></p>
+
+<a href="index.html" class="lesson-btn back">⬅ Orqaga</a>
 </div>
 
 <script>
