--- a/web/dars.html
+++ b/web/dars.html
@@ -7,74 +7,59 @@
 
 <style>
 body{
-  background: linear-gradient(180deg,#1e1b4b,#020617);
+  margin:0;                                                                   font-family:Arial;
+  background: radial-gradient(circle at top,#6d28d9,#020617);
+  min-height:100vh;
   color:white;
-  font-family: Arial, sans-serif;
-  padding:20px;
+  padding-top:40px;
 }
 
-/* KARTA */
-.test-box{
-  background: rgba(30,41,59,0.8);
-  backdrop-filter: blur(10px);
-  padding:20px;
-  border-radius:20px;
-  margin-top:20px;
-  box-shadow:0 10px 30px rgba(0,0,0,0.5);
+.wrapper{
+  width:95%;
+  max-width:420px;
+  background:rgba(30,30,60,0.6);
+  border-radius:30px;
+  padding:25px;
+  backdrop-filter:blur(20px);
+  box-shadow:0 20px 60px rgba(0,0,0,0.6);
+  text-align:center;
+  margin:auto;
 }
 
-/* SAVOL */
-.test-box h3{
-  margin-bottom:10px;
-  font-size:22px;
+.title{
+  font-size:32px;
+  font-weight:bold;
+  margin-bottom:20px;
 }
 
-/* TUGMA */
-.test-btn{
+.lesson-btn{
   display:block;
   width:100%;
-  padding:16px;
-  margin:10px 0;
+  padding:18px;
+  margin:12px 0;
   border:none;
-  border-radius:14px;
-  font-size:18px;
+  border-radius:22px;
+  font-size:20px;
   font-weight:bold;
   color:white;
-  cursor:pointer;
-  background: linear-gradient(45deg,#f97316,#7c3aed);
+  text-decoration:none;
+  text-align:center;
   transition:0.3s;
+  box-shadow:0 8px 30px rgba(0,0,0,0.5);
 }
 
-.test-btn:hover{
-  transform:scale(1.03);
+.lesson-btn:hover{
+  transform:scale(1.05);
   opacity:0.9;
 }
 
-/* NATIJA */
-.result{
-  margin-top:10px;
-  font-size:18px;
-  font-weight:bold;
+/* Ranglar */
+.gradient{
+  background:linear-gradient(90deg,#ff7a18,#8b5cf6,#2563eb);
 }
 
-.true{
-  color:#22c55e;
-  font-weight:bold;
-  font-size:18px;
-}
-
-.false{
-  color:#ef4444;
-  font-weight:bold;
-  font-size:18px;
-}
-
-/* UMUMIY NATIJA */
-#natija{
-  font-size:24px;
-  text-align:center;
-  margin-top:20px;
-  color:#22c55e;
+.back{
+  background:linear-gradient(90deg,#ef4444,#dc2626);
 }
 </style>
 </head>
