--- a/web/dars.html
+++ b/web/dars.html
@@ -23,7 +23,8 @@ body{
   backdrop-filter:blur(20px);
   box-shadow:0 20px 60px rgba(0,0,0,0.6);
   text-align:center;
-  margin:auto;
+  margin:auto;          /* SHU MUHIM */
+  box-sizing:border-box;/* SHU HAM MUHIM */}
 }
 
 .title{
