--- a/web/dars.html
+++ b/web/dars.html
@@ -28,9 +28,11 @@ body{
 }
 
 .title{
-  font-size:32px;
+  text-align:center;
+  font-size:30px;
   font-weight:bold;
-  margin-bottom:20px;
+  margin-bottom:10px;
+  text-shadow:0 5px 20px rgba(0,0,0,0.5);
 }
 
 .lesson-btn{
