--- a/web/dars.html
+++ b/web/dars.html
@@ -7,11 +7,16 @@
 
 <style>
 body{
-  margin:0;                                                                   font-family:Arial;
+  margin:0;
+  font-family:Arial;
   background: radial-gradient(circle at top,#6d28d9,#020617);
+
+  display:flex;
+  justify-content:center;
+  align-items:center;
+
   min-height:100vh;
   color:white;
-  padding-top:40px;
 }
 
 .wrapper{
@@ -20,11 +25,12 @@ body{
   background:rgba(30,30,60,0.6);
   border-radius:30px;
   padding:25px;
-  backdrop-filter:blur(20px);
   box-shadow:0 20px 60px rgba(0,0,0,0.6);
+  backdrop-filter:blur(20px);
   text-align:center;
+
   margin:auto;          /* SHU MUHIM */
-  box-sizing:border-box;/* SHU HAM MUHIM */}
+  box-sizing:border-box;/* SHU HAM MUHIM */
 }
 
 .title{
@@ -36,29 +42,51 @@ body{
 }
 
 .lesson-btn{
-  display:block;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  gap:12px;
+
   width:100%;
   padding:18px;
-  margin:12px 0;
+  margin:14px 0;
   border:none;
   border-radius:22px;
+
   font-size:20px;
   font-weight:bold;
   color:white;
   text-decoration:none;
-  text-align:center;
-  transition:0.3s;
+
+  background:linear-gradient(90deg,#ff7a18,#8b5cf6,#2563eb);
   box-shadow:0 8px 30px rgba(0,0,0,0.5);
+  transition:0.3s;
+
+  box-sizing:border-box;   /* ENG MUHIM */
+}
+
+.green{
+  background:linear-gradient(90deg,#22c55e,#16a34a);
+}
+
+.blue{
+  background:linear-gradient(90deg,#3b82f6,#2563eb);
+}
+
+.orange{
+  background:linear-gradient(90deg,#f59e0b,#ea580c);
+
 }
 
 .lesson-btn:hover{
   transform:scale(1.05);
   opacity:0.9;
 }
-
-/* Ranglar */
-.gradient{
-  background:linear-gradient(90deg,#ff7a18,#8b5cf6,#2563eb);
+.subtitle{
+  text-align:center;
+  opacity:0.8;
+  margin-bottom:25px;
+  color:#cbd5f5;
 }
 
 .back{
@@ -82,7 +110,6 @@ body{
 <a href="mavzu8.html" class="lesson-btn gradient">8-Mavzu</a>
 <a href="mavzu9.html" class="lesson-btn gradient">9-Mavzu</a>
 <a href="mavzu10.html" class="lesson-btn gradient">10-Mavzu</a>
-<a href="mavzu11.html" class="lesson-btn gradient">11-Mavzu</a>
 
 <a href="index.html" class="lesson-btn back">⬅ Orqaga</a>
 </div>
