--- a/web/mavzu1.html
+++ b/web/mavzu1.html
@@ -75,6 +75,10 @@ body{
   margin-top:20px;
   color:#22c55e;
 }
+
+.back{
+  background:linear-gradient(90deg,#ef4444,#dc2626);
+}
 </style>
 </head>
 
