--- a/web/mavzu1.html
+++ b/web/mavzu1.html
@@ -86,6 +86,7 @@ body{
   font-weight:bold;
   color:white;
   text-decoration:none;
+  border:none;
   border-radius:14px;
   background:linear-gradient(90deg,#ef4444,#dc2626);
   box-shadow:0 8px 25px rgba(0,0,0,0.5);
