--- a/web/mavzu1.html
+++ b/web/mavzu1.html
@@ -79,15 +79,17 @@ body{
 .back-btn{
   display:block;
   width:100%;
-  margin-top:30px;
-  padding:16px;
+
+  margin:10px 0;     /* 30px o‘rniga 10px */
+  padding:16px;      /* Test bilan bir xil */
+  font-size:18px;    /* Test bilan bir xil */
+  border-radius:14px;/* Test bilan bir xil */
+
   text-align:center;
-  font-size:18px;
   font-weight:bold;
   color:white;
   text-decoration:none;
   border:none;
-  border-radius:14px;
   background:linear-gradient(90deg,#ef4444,#dc2626);
   box-shadow:0 8px 25px rgba(0,0,0,0.5);
   transition:0.3s;
