--- a/web/mavzu1.html
+++ b/web/mavzu1.html
@@ -96,7 +96,7 @@ body{
 }
 
 .back-btn:hover{
-  transform:scale(1.05);
+  transform:scale(1.03);
   opacity:0.9;
 }
 </style>
@@ -224,7 +224,7 @@ Sizga qulay boʻlishi uchun muloqotda kerak boʻladigan asosiy gaplarni ham kelt
 <button class="test-btn" onclick="t10('3')">öğreniyorsun</button>
 <p id="r10" class="result"></p>
 
-<a href="dars.html" class="back-btn">⬅ oOrqaga</a>
+<a href="dars.html" class="back-btn">⬅ Orqaga</a>
 </div>
 
 <script>
