--- a/web/mavzu1.html
+++ b/web/mavzu1.html
@@ -5,6 +5,11 @@
 <title>1-Mavzu</title>
 
 <style>
+.test-btn,
+.back-btn{
+  box-sizing: border-box;
+}
+
 body{
   background: linear-gradient(180deg,#1e1b4b,#020617);
   color:white;
@@ -224,7 +229,7 @@ Sizga qulay boʻlishi uchun muloqotda kerak boʻladigan asosiy gaplarni ham kelt
 <button class="test-btn" onclick="t10('3')">öğreniyorsun</button>
 <p id="r10" class="result"></p>
 
-<a href="dars.html" class="back-btn">⬅ Orqaga</a>
+<a href="dars.html" class="back-btn">⬅ uOrqaga</a>
 </div>
 
 <script>
