--- a/web/mavzu1.html
+++ b/web/mavzu1.html
@@ -229,7 +229,7 @@ Sizga qulay boʻlishi uchun muloqotda kerak boʻladigan asosiy gaplarni ham kelt
 <button class="test-btn" onclick="t10('3')">öğreniyorsun</button>
 <p id="r10" class="result"></p>
 
-<a href="dars.html" class="back-btn">⬅ uOrqaga</a>
+<a href="dars.html" class="back-btn">⬅ Orqaga</a>
 </div>
 
 <script>
