--- a/web/dars.html
+++ b/web/dars.html
@@ -6,91 +6,64 @@
 <title>Darslar</title>
 
 <style>
+*{
+  box-sizing:border-box;
+}
+
 body{
   margin:0;
-  font-family:Arial;
-  background: radial-gradient(circle at top,#6d28d9,#020617);
-
-  display:flex;
-  justify-content:center;
-  align-items:center;
-
-  min-height:100vh;
+  font-family:Arial, sans-serif;
+  background: linear-gradient(180deg,#1e1b4b,#020617);
   color:white;
+  padding:20px;
 }
 
+/* KARTA */
 .wrapper{
-  width:95%;
-  max-width:420px;
-  background:rgba(30,30,60,0.6);
-  border-radius:30px;
-  padding:25px;
-  box-shadow:0 20px 60px rgba(0,0,0,0.6);
-  backdrop-filter:blur(20px);
-  text-align:center;
-
-  margin:auto;          /* SHU MUHIM */
-  box-sizing:border-box;/* SHU HAM MUHIM */
-}
-
-.title{
-  text-align:center;
-  font-size:30px;
-  font-weight:bold;
-  margin-bottom:10px;
-  text-shadow:0 5px 20px rgba(0,0,0,0.5);
-}
-
-.lesson-btn{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  gap:12px;
-
   width:100%;
-  padding:18px;
-  margin:14px 0;
-  border:none;
-  border-radius:22px;
+  max-width:420px;
+  margin:auto;
+  background: rgba(30,41,59,0.8);
+  backdrop-filter: blur(10px);
+  padding:20px;
+  border-radius:20px;
+  box-shadow:0 10px 30px rgba(0,0,0,0.5);
+  text-align:center;
+}
 
-  font-size:20px;
+/* TITLE */
+.title{
+  font-size:28px;
+  font-weight:bold;
+  margin-bottom:20px;
+}
+
+/* TUGMA */
+.lesson-btn{
+  display:block;
+  width:100%;
+  padding:16px;
+  margin:10px 0;
+  border:none;
+  border-radius:14px;
+  font-size:18px;
   font-weight:bold;
   color:white;
   text-decoration:none;
-
-  background:linear-gradient(90deg,#ff7a18,#8b5cf6,#2563eb);
-  box-shadow:0 8px 30px rgba(0,0,0,0.5);
+  cursor:pointer;
+  background: linear-gradient(45deg,#f97316,#7c3aed);
   transition:0.3s;
-
-  box-sizing:border-box;   /* ENG MUHIM */
-}
-
-.green{
-  background:linear-gradient(90deg,#22c55e,#16a34a);
-}
-
-.blue{
-  background:linear-gradient(90deg,#3b82f6,#2563eb);
-}
-
-.orange{
-  background:linear-gradient(90deg,#f59e0b,#ea580c);
-
 }
 
 .lesson-btn:hover{
-  transform:scale(1.05);
+  transform:scale(1.03);
   opacity:0.9;
 }
-.subtitle{
-  text-align:center;
-  opacity:0.8;
-  margin-bottom:25px;
-  color:#cbd5f5;
-}
 
+/* ORQAGA */
 .back{
   background:linear-gradient(90deg,#ef4444,#dc2626);
+  box-shadow:0 8px 25px rgba(0,0,0,0.5);
 }
 </style>
 </head>
@@ -100,16 +73,16 @@ body{
 <div class="wrapper">
 <h1 class="title">📘 Darslar</h1>
 
-<a href="mavzu1.html" class="lesson-btn gradient">1-Mavzu</a>
-<a href="mavzu2.html" class="lesson-btn gradient">2-Mavzu</a>
-<a href="mavzu3.html" class="lesson-btn gradient">3-Mavzu</a>
-<a href="mavzu4.html" class="lesson-btn gradient">4-Mavzu</a>
-<a href="mavzu5.html" class="lesson-btn gradient">5-Mavzu</a>
-<a href="mavzu6.html" class="lesson-btn gradient">6-Mavzu</a>
-<a href="mavzu7.html" class="lesson-btn gradient">7-Mavzu</a>
-<a href="mavzu8.html" class="lesson-btn gradient">8-Mavzu</a>
-<a href="mavzu9.html" class="lesson-btn gradient">9-Mavzu</a>
-<a href="mavzu10.html" class="lesson-btn gradient">10-Mavzu</a>
+<a href="mavzu1.html" class="lesson-btn">1-Mavzu</a>
+<a href="mavzu2.html" class="lesson-btn">2-Mavzu</a>
+<a href="mavzu3.html" class="lesson-btn">3-Mavzu</a>
+<a href="mavzu4.html" class="lesson-btn">4-Mavzu</a>
+<a href="mavzu5.html" class="lesson-btn">5-Mavzu</a>
+<a href="mavzu6.html" class="lesson-btn">6-Mavzu</a>
+<a href="mavzu7.html" class="lesson-btn">7-Mavzu</a>
+<a href="mavzu8.html" class="lesson-btn">8-Mavzu</a>
+<a href="mavzu9.html" class="lesson-btn">9-Mavzu</a>
+<a href="mavzu10.html" class="lesson-btn">10-Mavzu</a>
 
 <a href="index.html" class="lesson-btn back">⬅ Orqaga</a>
 </div>
