--- a/web/atamalar.html
+++ b/web/atamalar.html
@@ -15,11 +15,16 @@ body{
   font-family:Arial, sans-serif;
   background: linear-gradient(180deg,#1e1b4b,#020617);
   color:white;
+}
+
+/* TASHQI WRAPPER — FULL EKRAN */
+.wrapper{
+  min-height:100vh;
   padding:20px;
 }
 
-/* KARTA */
-.wrapper{
+/* ICHKI KARTA */
+.card{
   width:100%;
   max-width:420px;
   margin:auto;
@@ -38,7 +43,7 @@ body{
   margin-bottom:20px;
 }
 
-/* TUGMA */
+/* TUGMALAR */
 .lesson-btn{
   display:block;
   width:100%;
@@ -71,17 +76,24 @@ body{
 <body>
 
 <div class="wrapper">
+  <div class="card">
 
-<div class="title">📘 Atamalar</div>
+    <h1 class="title">📘 Darslar</h1>
 
-<a href="#" class="menu-btn">1-Mavzu Atamalar</a>
-<a href="#" class="menu-btn">2-Mavzu Atamalar</a>
-<a href="#" class="menu-btn">3-Mavzu Atamalar</a>
-<a href="#" class="menu-btn">4-Mavzu Atamalar</a>
-<a href="#" class="menu-btn">5-Mavzu Atamalar</a>
+    <a href="mavzu1.html" class="lesson-btn">1-Mavzu</a>
+    <a href="mavzu2.html" class="lesson-btn">2-Mavzu</a>
+    <a href="mavzu3.html" class="lesson-btn">3-Mavzu</a>
+    <a href="mavzu4.html" class="lesson-btn">4-Mavzu</a>
+    <a href="mavzu5.html" class="lesson-btn">5-Mavzu</a>
+    <a href="mavzu6.html" class="lesson-btn">6-Mavzu</a>
+    <a href="mavzu7.html" class="lesson-btn">7-Mavzu</a>
+    <a href="mavzu8.html" class="lesson-btn">8-Mavzu</a>
+    <a href="mavzu9.html" class="lesson-btn">9-Mavzu</a>
+    <a href="mavzu10.html" class="lesson-btn">10-Mavzu</a>
 
-<a href="index.html" class="menu-btn back">⬅ Orqaga</a>
+    <a href="index.html" class="lesson-btn back">⬅ Orqaga</a>
 
+  </div>
 </div>
 
 </body>
