--- a/web/index.html
+++ b/web/index.html
@@ -8,18 +8,24 @@
 <style>
 *{
   box-sizing:border-box;
+  margin:0;
+  padding:0;
 }
 
 body{
-  margin:0;
   font-family:Arial, sans-serif;
   background: linear-gradient(180deg,#1e1b4b,#020617);
   color:white;
+}
+
+/* TASHQI WRAPPER */
+.wrapper{
+  min-height:100vh;
   padding:20px;
 }
 
-/* KARTA */
-.wrapper{
+/* ICHKI CARD */
+.card{
   width:100%;
   max-width:420px;
   margin:auto;
@@ -82,16 +88,19 @@ body{
 <body>
 
 <div class="wrapper">
-<h1 class="title">🇹🇷 Turk Tilini O‘rganamiz</h1>
-<div class="subtitle">Mini Darslik & Test Platforma</div>
+  <div class="card">
 
-<a href="dars.html" class="lesson-btn">📘 Darslar</a>
-<a href="test.html" class="lesson-btn">🎓 Testlar</a>
-<a href="atamalar.html" class="lesson-btn">📖 Atamalar</a>
+    <h1 class="title">🇹🇷 Turk Tilini O‘rganamiz</h1>
+    <div class="subtitle">Mini Darslik & Test Platforma</div>
 
-<div class="footer">Turk tili Bot © 2026</div>
+    <a href="dars.html" class="lesson-btn">📘 Darslar</a>
+    <a href="test.html" class="lesson-btn">🎓 Testlar</a>
+    <a href="atamalar.html" class="lesson-btn">📖 Atamalar</a>
+
+    <div class="footer">Turk tili Bot © 2026</div>
+
+  </div>
 </div>
 
 </body>
 </html>
-
