--- a/web/index.html
+++ b/web/index.html
@@ -29,9 +29,9 @@ body{
   width:100%;
   max-width:420px;
   margin:auto;
-  background: rgba(30,41,59,0.8);
+  background: rgba(30,41,59,0.85);
   backdrop-filter: blur(10px);
-  padding:20px;
+  padding:22px;
   border-radius:20px;
   box-shadow:0 10px 30px rgba(0,0,0,0.5);
   text-align:center;
@@ -46,7 +46,7 @@ body{
 
 /* SUBTITLE */
 .subtitle{
-  opacity:0.8;
+  opacity:0.85;
   margin-bottom:20px;
   color:#cbd5f5;
   font-size:16px;
@@ -66,19 +66,28 @@ body{
   text-decoration:none;
   cursor:pointer;
   background: linear-gradient(45deg,#f97316,#7c3aed);
-  transition:0.3s;
+  transition:0.25s;
 }
 
 .lesson-btn:hover{
   transform:scale(1.03);
-  opacity:0.9;
+  opacity:0.95;
+}
+
+/* ABOUT MATN */
+.about{
+  margin-top:18px;
+  font-size:14px;
+  line-height:1.6;
+  opacity:0.85;
+  color:#cbd5f5;
 }
 
 /* FOOTER */
 .footer{
-  margin-top:20px;
-  font-size:14px;
-  opacity:0.7;
+  margin-top:18px;
+  font-size:13px;
+  opacity:0.65;
   color:#94a3b8;
 }
 </style>
@@ -96,6 +105,15 @@ body{
     <a href="dars.html" class="lesson-btn">📘 Darslar</a>
     <a href="test.html" class="lesson-btn">🎓 Testlar</a>
     <a href="atamalar.html" class="lesson-btn">📖 Atamalar</a>
+
+    <div class="about">
+      Ushbu mini ilova orqali siz turk tilining asosiy grammatikasi,
+      kundalik so‘zlashuv iboralari va testlar yordamida bilimlaringizni
+      mustahkamlashingiz mumkin.<br><br>
+
+      Darslarni to‘liq yakunlasangiz, 3 oy ichida turk tilida
+      B2 darajaga chiqishingiz mumkin.
+    </div>
 
     <div class="footer">Turk tili Bot © 2026</div>
 
